[package]
name = "rclrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
thiserror = "1.0.30"
lazy_static = "1.4.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
futures = "0.3.19"
rclrust_common = { path = "rclrust_common", version = "0.1.0" }

[dev-dependencies]
serde_json = "1.0.74"
futures = "0.3.19"
tokio = { version = "1.15.0", features = ["full"] }
rand = "0.8.4"

[build-dependencies]
rclrust_common = { path = "rclrust_common", version = "0.1.0" }

